# cuda_template

./: CMakeLists.txt  README.md  create_template.sh
src/: cudaMatMul.cu  cudaMatMul.h  hello.cu  hello.cuh  main.cpp
